--- a/src/Componentes/Header/ButtonContainer/ButtonContainer.css
+++ b/src/Componentes/Header/ButtonContainer/ButtonContainer.css
@@ -1,29 +1,17 @@
-.container-botones{
-    width: 52%;
-    height: 54px;
+.container-botones {
     display: flex;
-    position: absolute;
-    justify-content: flex-end;
-    gap: 10px;
-    padding-left: 45%;
-    padding-top: 32px;
-    align-content: flex-end;
-    flex-direction: row;
-    align-items: center;
-    
-    
-}
-
-.button{
-    padding: 0;
-    border: none;
-    background: none;
-    cursor: pointer;
-    
-}
-
-.button img {
-    display: block;
-}
+    gap: 50px;
+    margin-right: 35px;
+  }
   
-    
+  .button {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .button img {
+    width: 160px;
+    height: 50px;
+  }
+  
