--- a/src/Componentes/Header/Header.css
+++ b/src/Componentes/Header/Header.css
@@ -1,25 +1,46 @@
-.header{
+.header {
     display: flex;
-    justify-content: 'space-between';
-    align-items: 'center';
-    padding: '10px 20px';
-    background-color: #262626;
-    width: 100%;
-    height: 115px;
-    
-}
-
-.logo {
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #0000;
+    color: darkgray;
+    height: 88px;
+  }
+  
+  .logo-container {
     display: flex;
-    position: absolute;
-    align-content: center;
-    padding-top: 35px;
-    padding-left: 35px;
-    
-}
-
-.button-container{
+    align-items: center;
+  }
+  
+  .logo {
+    height: 50px;
+  }
+  
+  .container-botones {
     display: flex;
-    -ms-flex-align: end;
-}
-
+    gap: 50px;
+  }
+  
+  .button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 160px;
+    height: 50px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .button img {
+    height: 24px;
+    margin-right: 10px;
+  }
+  
+  .button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  
