--- a/src/Componentes/NuevoVideoForm/NuevoVideoForm.css
+++ b/src/Componentes/NuevoVideoForm/NuevoVideoForm.css
@@ -2,7 +2,7 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #2c2c2c; /* Ajusta el color de fondo según tu diseño original */
+  background-color: #2c2c2c;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -51,11 +51,3 @@
 .form-buttons button[type='button'] {
   background-color: #dc3545;
 }
-
-
-
-
-
-
-
-
