--- a/src/Componentes/VideoList/VideoList.css
+++ b/src/Componentes/VideoList/VideoList.css
@@ -1,36 +1,28 @@
 .videoList {
-    padding: 20px;
-  }
-  
-  .section {
-    margin-bottom: 20px;
-  }
-  
-  .section h2 {
-    color: #fff;
-    padding: 10px;
-    border-radius: 8px;
-    text-align: center;
-  }
-  
-  .frontend {
-    background-color: darkgray
-  }
-  
-  .backend {
-    background-color: darkgray
-  }
-  
-  .innovacionGestion {
-    background-color: darkgray
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
+  padding: 0;
+}
+
+.section {
+  margin-bottom: 20px;
+}
+
+.section h2 {
+  color: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.frontend, .backend, .innovacionGestion {
+  background-color: #0000;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
