--- a/src/Componentes/VideoList/VideoList.css
+++ b/src/Componentes/VideoList/VideoList.css
@@ -23,6 +23,8 @@ ul {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 20px;
+  align-content: stretch;
+  flex-direction: row;
 }
