--- a/src/Componentes/Card/Card.module.css
+++ b/src/Componentes/Card/Card.module.css
@@ -1,35 +1,35 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    width: 320px;
-    height: auto;
-    background-color: #000000;
-  }
+.card-container {
+  position: relative;
+  width: 380px;
+  height: 283px;
+  margin: 10px;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #000000;
+}
+
+.card-capa {
+  width: 100%;
+  height: 70%; /* Ajusta la altura de la imagen */
+  object-fit: cover; /* Asegúrate de que la imagen cubra el área */
+}
+
+.card-buttons {
+  display: flex;
+  justify-content: space-evenly;
   
-  .capa {
-    width: 98%;
-    height: auto;
-    border-radius: 10px;
-  }
-  
-  .botonContainer {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin-top: 10px;
-  }
-  
-  .botoncard {
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .iconCard {
-    width: 100px;
-    height: 28px;
-  }
-  
+  background-color: #000000;
+}
+
+.card-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.iconCard {
+  width: 100px;
+  height: 28px;
+ 
+}
