--- a/src/Componentes/Contenidos/Contenidos.css
+++ b/src/Componentes/Contenidos/Contenidos.css
@@ -22,8 +22,8 @@
 .cardContainer {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
+    gap: 10px;
+    justify-content: flex-start;
     align-items: flex-start;
     
     
