--- a/src/Componentes/NuevoVideoForm/NuevoVideoForm.css
+++ b/src/Componentes/NuevoVideoForm/NuevoVideoForm.css
@@ -1,53 +1,74 @@
-.nuevoVideoForm {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #2c2c2c;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.nuevo-video-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: white;
+  margin: 60px;
 }
 
-.nuevoVideoForm h1 {
-  font-size: 24px;
+.titulo-modal {
+  font-size: 54px;
+  font-weight: bold;
+  color: #007bff;
   margin-bottom: 20px;
-  color: #fff;
+}
+
+p{
+  text-align: center;
+  font-size: 20px;
 }
 
 .form-group {
-  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-group label {
-  display: block;
   margin-bottom: 5px;
-  color: #fff;
 }
 
 .form-group input,
 .form-group select,
 .form-group textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ddd;
+  padding: 10px;
+  border: 1px solid #007bff;
   border-radius: 4px;
-  box-sizing: border-box;
+  background-color: #001f3f;
+  color: white;
 }
 
 .form-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 30px;
 }
 
 .form-buttons button {
-  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 0px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
-  background-color: #007bff;
+  background-color: transparent;
   color: white;
-  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
-.form-buttons button[type='button'] {
-  background-color: #dc3545;
+.form-buttons button:hover {
+  background-color: #0056b3;
+}
+
+.form-buttons img {
+  margin-right: 10px;
+}
+
+.form-buttons button.limpiar {
+  background-color: transparent;
+}
+
+.form-buttons button.limpiar:hover {
+  background-color: #5a6268;
 }
