--- a/src/Componentes/NuevoVideoForm/NuevoVideoForm.css
+++ b/src/Componentes/NuevoVideoForm/NuevoVideoForm.css
@@ -13,14 +13,20 @@
   margin-bottom: 20px;
 }
 
-p{
+p {
   text-align: center;
   font-size: 20px;
+}
+
+.form-row {
+  display: flex;
+  gap: 20px;
 }
 
 .form-group {
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .form-group label {
@@ -30,11 +36,25 @@ p{
 .form-group input,
 .form-group select,
 .form-group textarea {
-  padding: 10px;
+  padding: 15px;
   border: 1px solid #007bff;
   border-radius: 4px;
   background-color: #001f3f;
   color: white;
+}
+
+.descripcion-container {
+  display: flex;
+  gap: 20px;
+}
+
+.descripcion-container .form-group {
+  flex: 1;
+}
+
+.descripcion-container textarea {
+  width: 50%;
+  height: 200px;
 }
 
 .form-buttons {
@@ -62,7 +82,8 @@ p{
 }
 
 .form-buttons img {
-  margin-right: 10px;
+  margin-right: 20px;
+  padding: 20px;
 }
 
 .form-buttons button.limpiar {
